p3/confs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil42-playground
  namespace: dev
spec:
  selector:
    matchLabels:
      app: wil42-playground
  replicas: 1
  template:
    metadata:
      labels:
        app: wil42-playground
    spec:
      containers:
        - name: wil42-playground
          image: wil42/playground:v1
          ports:
            - containerPort: 8888

---
apiVersion: v1
kind: Service
metadata:
  name: wil42-playground
  namespace: dev
spec:
  selector:
    app: wil42-playground
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: LoadBalancer
