p3/confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil42-playground
spec:
  selector:
    app: wil42-playground
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: LoadBalancer
